{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 273,
  "lineage": "d59f5ee3-a753-ffa9-3192-16b93713b698",
  "resources": [
    {
      "module": "module.cluster_creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:security-group/sg-0cfd0527fd268f296",
            "description": "Control traffic to/from RDS Aurora test-aurora-db-mysql",
            "egress": [],
            "id": "sg-0cfd0527fd268f296",
            "ingress": [],
            "name": "test-aurora-db-mysql-20221201034737557100000003",
            "name_prefix": "test-aurora-db-mysql-",
            "owner_id": "383452002839",
            "revoke_rules_on_delete": false,
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "test-aurora-db-mysql",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "test-aurora-db-mysql",
              "ServiceName": "Security-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster_creation",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "From allowed CIDRs",
            "from_port": 3306,
            "id": "sgrule-935735080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfd0527fd268f296",
            "security_group_rule_id": "sgr-0501e822b4be61735",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster_creation.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91edc36225525cd",
            "domain": "vpc",
            "id": "eipalloc-0b91edc36225525cd",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-7-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.7.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8b4cf0b034b444d",
            "domain": "vpc",
            "id": "eipalloc-0d8b4cf0b034b444d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-80-238.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.80.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:internet-gateway/igw-0f5c9a0107e7cae87",
            "id": "igw-0f5c9a0107e7cae87",
            "owner_id": "383452002839",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91edc36225525cd",
            "connectivity_type": "public",
            "id": "nat-0b9322bdcd6393c29",
            "network_interface_id": "eni-02bdbfbc39e000f2b",
            "private_ip": "10.0.101.105",
            "public_ip": "43.204.7.159",
            "subnet_id": "subnet-06470332b574f0f8f",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8b4cf0b034b444d",
            "connectivity_type": "public",
            "id": "nat-018d28143c896fbe2",
            "network_interface_id": "eni-04b1b7d8a5de7e1ef",
            "private_ip": "10.0.102.150",
            "public_ip": "3.6.80.238",
            "subnet_id": "subnet-03c39a0266f3983e5",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099048663b21f181d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b9322bdcd6393c29",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099048663b21f181d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09bd5165ad023cc9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-018d28143c896fbe2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09bd5165ad023cc9c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5c9a0107e7cae87",
            "id": "r-rtb-056180072d464e24e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056180072d464e24e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:route-table/rtb-099048663b21f181d",
            "id": "rtb-099048663b21f181d",
            "owner_id": "383452002839",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:route-table/rtb-09bd5165ad023cc9c",
            "id": "rtb-09bd5165ad023cc9c",
            "owner_id": "383452002839",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:route-table/rtb-056180072d464e24e",
            "id": "rtb-056180072d464e24e",
            "owner_id": "383452002839",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fef3fefde104be3",
            "route_table_id": "rtb-099048663b21f181d",
            "subnet_id": "subnet-01a146dc1286f8629"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ff01974059bd55",
            "route_table_id": "rtb-09bd5165ad023cc9c",
            "subnet_id": "subnet-0cb68bbeac6dcfc58"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05672a7b0a72d87db",
            "route_table_id": "rtb-056180072d464e24e",
            "subnet_id": "subnet-06470332b574f0f8f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feab7e4e694a8978",
            "route_table_id": "rtb-056180072d464e24e",
            "subnet_id": "subnet-03c39a0266f3983e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:subnet/subnet-01a146dc1286f8629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a146dc1286f8629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:subnet/subnet-0cb68bbeac6dcfc58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb68bbeac6dcfc58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:subnet/subnet-06470332b574f0f8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06470332b574f0f8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:subnet/subnet-03c39a0266f3983e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c39a0266f3983e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "vpc_id": "vpc-04fa1ba4583cceef5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383452002839:vpc/vpc-04fa1ba4583cceef5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080f966290dd6ac2c",
            "default_route_table_id": "rtb-045baca0add88ce8e",
            "default_security_group_id": "sg-09bba46113c46e431",
            "dhcp_options_id": "dopt-03a4e932353de8957",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fa1ba4583cceef5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045baca0add88ce8e",
            "owner_id": "383452002839",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Deployment_stack": "green",
              "Environment": "performance",
              "Name": "Iaac-LACP-Mock-green-os",
              "ServiceName": "Security-stack"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}